# SRE-Orchestrator

./: .gitignore  Makefile  README.md  knowledge_graph.yaml  mcp_config.yaml
.bmad-core/: install-manifest.yaml
.github/workflows/: README.md  ci.yml
charts/sre-orchestrator/: Chart.yaml  README.md  values.yaml
cli/: Makefile  README.md  pyproject.toml
cli/src/sre_orchestrator_cli/: __init__.py  client.py  config.py  main.py  session.py  ui.py
cli/tests/: __init__.py  test_client.py  test_config.py  test_main.py
docs/: architecture.md  brief.md  cli-guide.md  extending-investigation-graph.md  langgraph-workflow.md  mcp-integration.md  native-langgraph-deployment-guide.md  prd.md
docs/architecture/: change-log.md  checklist-results-report.md  coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  error-handling-strategy.md  external-apis.md  high-level-architecture.md  index.md  (+9 more)
services/k8s-agent/: Dockerfile  Makefile  pyproject.toml
services/k8s-agent/app/: main.py
services/k8s-agent/app/api/v1/: pods.py
services/k8s-agent/app/models/: pod_details.py
services/k8s-agent/app/services/: k8s_client.py
services/k8s-agent/tests/unit/: test_pods_api.py
services/orchestrator/: .env.example  CONFIGURATION.md  Dockerfile  MCP_CONFIG_GUIDE.md  MCP_CONFIG_MIGRATION.md  Makefile  README.md  knowledge_graph.yaml  mcp_config.yaml  pyproject.toml
services/orchestrator/app/: main.py
services/orchestrator/app/api/v1/: incidents.py
services/orchestrator/app/core/: incident_repository.py
services/orchestrator/app/models/: incidents.py  pod_details.py
services/orchestrator/app/services/: k8s_agent_client.py
services/orchestrator/src/app/: config.py  main.py
services/orchestrator/src/app/api/v1/: incidents.py
services/orchestrator/src/app/core/: correlation_engine.py  incident_repository.py  investigation_agent.py  retry_utils.py
services/orchestrator/src/app/models/: incidents.py  knowledge_graph.py  mcp_config.py  pod_details.py
services/orchestrator/src/app/services/: k8s_agent_client.py  knowledge_graph_service.py  langchain_llm_client.py  llm_client.py  mcp_config_service.py  mcp_connection_manager.py  mcp_tool_config_loader.py  mcp_tool_manager.py
services/orchestrator/src/tests/e2e/: __init__.py  test_full_workflow.py
services/orchestrator/src/tests/integration/: test_async_incident_workflow.py  test_backward_compatibility.py  test_concurrent_investigations.py  test_incident_workflow.py  test_langgraph_agent.py
services/orchestrator/src/tests/unit/: test_correlation_engine.py  test_incident_repository.py  test_incidents_api.py  test_investigation_agent.py  test_k8s_agent_client.py  test_knowledge_graph_service.py  test_langchain_llm_client.py  test_llm_client.py  test_main.py  test_mcp_config_service.py  test_mcp_connection_manager.py  test_mcp_tool_manager.py
services/orchestrator/tests/: __init__.py  conftest.py  test_config.py  test_infrastructure.py  test_mcp_config_service.py
services/orchestrator/tests/fixtures/: __init__.py  incident_fixtures.py  llm_fixtures.py  mcp_fixtures.py
services/orchestrator/tests/unit/: test_incidents_api.py  test_k8s_agent_client.py  test_main.py  test_models.py  test_startup_integration.py
services/orchestrator/tests/unit/api/: test_incidents_api.py
services/orchestrator/tests/unit/core/: test_incident_repository.py  test_investigation_agent.py  test_retry_utils.py
services/orchestrator/tests/unit/services/: test_knowledge_graph_service.py  test_mcp_config_service.py  test_mcp_tool_manager.py
(+57 files in other folders)
